# Helmsman

./: CMakeLists.txt  README.md
include/: constants.h
include/nn/: autobackend.h  onnx_model_base.h
include/utils/: augment.h  ops.h  viz_utils.hpp
src/: main.cpp  main_image.cpp  main_video.cpp  old_main.cpp  viz_utils.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: ops.cpp
